crates/tests/libs/bindgen/data/error/callback_out_with_args/input.rdl

#[win32]
mod Test {
    extern fn Handler(#[out(42)] output: i32);
}
        